# narratai

./: LICENSE  README.md  deploy.yaml  pyproject.toml
assets/srt/: sample_1.srt  sample_2.srt
configs/: settings.yaml
docker/: Dockerfile  build.sh  run.sh
src/: app.py
src/base/: model.py
src/configs/: config.py
src/transcription/: faster_whisper_transcriber.py  transcriber.py
src/transcription/utils/: file.py  subtitle.py  type.py
src/translation/: translator.py  utils.py
src/tts/: narration.py  utils.py  xtts.py
src/utils/: basic.py  logger.py  signal.py
